Fixed white space issue

--- a/main.scss
+++ b/main.scss
@@ -5,13 +5,6 @@
 $primary-blue: #00D8FF;
 $primary-black: #242424;
 
-* {
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
-   
-}
-
 
 
 
